// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Controls/Link <a> link 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  color: #007acc;
  cursor: pointer;
  font-size: 16px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .icon-inherit-color {
  fill: #007acc;
}

.c1:hover {
  color: rgba(0,122,204,0.8);
}

.c1:hover .icon-inherit-color {
  fill: rgba(0,122,204,0.8);
}

<div
  className="responsive c0"
>
  <a
    className="c1"
    href="javascript:void(0)"
  >
    I will click you
  </a>
</div>
`;

exports[`Storyshots Controls/Link <span> link 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: transparent;
  opacity: 1;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: .1em;
  padding-left: 3px;
}

.c1 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  color: #007acc;
  cursor: pointer;
  font-size: 16px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .icon-inherit-color {
  fill: #007acc;
}

.c1:hover {
  color: rgba(0,122,204,0.8);
}

.c1:hover .icon-inherit-color {
  fill: rgba(0,122,204,0.8);
}

<div
  className="responsive c0"
>
  <span
    className="c1"
    href={null}
    onClick={[Function]}
  >
    Dropdown link
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        <svg
          className="icon-inherit-color c4"
          fill={null}
          name="angle"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_angle"
          />
        </svg>
      </span>
    </span>
  </span>
</div>
`;
